bug with date dropdowns being too narrow fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@ body {
   font-family: 'Alegreya', serif;
 }
 
+#order_card_exp_2i, #order_card_exp_1i {
+  width: auto;
+}
+
 .glyphicon-remove {
   font-size: 30px;
 }
